--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=8080
+MONGODB_ATLASCNN=mongodb+srv://nodejs_apps:MyNodeServerAPP_$323@edcluster.nklqew6.mongodb.net/test
+SECRETORPRIVATEKEY=myPassword123
